[package]
name = "allroads"
version = "1.2.0"
edition = "2024"
description = "a rust-based roadmap viewer and project management tool"
license = "MIT"

[dependencies]
eframe = "0.29"
egui = "0.29"
chrono = "0.4"
rusqlite = { version = "0.40", features = ["bundled-sqlcipher"] }
rand = "0.8"
hex = "0.4"
keyring = "2"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 1
codegen-units = 1
strip = true
lto = true
debug = false

[package.metadata.bundle]
name = "allroads"
identifier = "com.vertigo.allroads.app"
icon = ["icon.icns"]
version = "1.2.0"
category = "Productivity"
short_description = "roadmap planning tool"
long_description = "a rust-based roadmap viewer and project management tool"
osx_minimum_system_version = "10.14"
